--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo_app",
   "version": "1.0.0",
   "description": "![Design preview for the Todo app coding challenge](./design/desktop-preview.jpg)",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
     "node": "18.x"
   },
